Fix: flex-wrap:wrap; not nowrap!

--- a/posters/style.css
+++ b/posters/style.css
@@ -54,7 +54,7 @@ body {
 
 .row {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   margin: 2px;
 }
 
